--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -49,7 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\XML_Manager\XML_Manager.csproj" />
+	  <ProjectReference Include="..\XMLManager\XMLManager.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
